add registration logic - add hibernate - add User entity downgrade to jdk 20